--- a/Level2/Task4/index.html
+++ b/Level2/Task4/index.html
@@ -1,28 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Complex Form Validation and Dynamic DOM Manipulation</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <title>Form Validation and Dynamic DOM</title>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-    <h1>Form Validation and Dynamic DOM Manipulation</h1>
-    <form id="myForm">
-        <label for="username">Username:</label>
-        <input type="text" id="username" name="username" required>
- 
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="password" required>
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="https://cognifyz.com/">Cognifyz</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="https://cognifyz.com/">About us </a>
+            </ul>
+        </div>
+    </nav>
+    <!-- Form Section -->
+    <section id="form-section" class="container mt-5">
+        <h2 class="text-center">Form Validation and Dynamic DOM Manipulation</h2>
+        <form id="registrationForm">
+            <div class="form-group">
+                <label for="username">Username</label>
+                <input type="text" class="form-control" id="username" placeholder="Enter username">
+                <div class="invalid-feedback">Username is required.</div>
+            </div>
+            <div class="form-group">
+                <label for="email">Email address</label>
+                <input type="email" class="form-control" id="email" placeholder="Enter email">
+                <div class="invalid-feedback">Please enter a valid email address.</div>
+            </div>
+            <div class="form-group">
+                <label for="password">Password</label>
+                <input type="password" class="form-control" id="password" placeholder="Enter password">
+                <small id="passwordHelp" class="form-text text-muted">Must be 8-20 characters long.</small>
+                <div class="invalid-feedback">Password must be 8-20 characters long and contain at least one uppercase
+                    letter, one number, and one special character.</div>
+            </div>
+            <button type="submit" class="btn btn-primary">Register</button>
+        </form>
+    </section>
 
-        <label for="confirmPassword">Confirm Password:</label>
-        <input type="password" id="confirmPassword" name="confirmPassword" required>
+    <!-- Footer -->
+    <footer class="bg-light text-center text-lg-start mt-5">
+        </div>
+        <div class="text-center p-3 bg-dark text-white">
+            © 2024 shubham
+        </div>
+    </footer>
 
-        <button type="submit">Submit</button>
-    </form>
-
-    <div id="messages"></div>
-
-    <script src="js/script.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+    <script src="script.js"></script>
 </body>
+
 </html>
