--- a/Level2/Task3/index.html
+++ b/Level2/Task3/index.html
@@ -1,115 +1,277 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Responsive Website</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/styles.css"> <!-- CSS -->
+    <title>Mypage</title>
+    <link rel='stylesheet' href='//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css'>
+    <link rel='stylesheet'
+        href='https://startbootstrap.com/templates/agency/font-awesome-4.1.0/css/font-awesome.min.css'>
+    <link rel="stylesheet" href="./style.css">
+
 </head>
+
 <body>
-         <nav>
-          <a href="https://cognifyz.com/" target="https://cognifyz.com/">
-          <img src="images/cognifyz-1.png" alt="logo"/></a>
-            <ul>
-              <li><a href="#hero">Home</a></li>
-              <li><a href="#About">About</a></li>
-              <li><a href="#services">Services</a></li>
-              <li><a href="#contact">Contact Us</a></li>
-          </ul>
-          
-        </nav>
-
-    <main>
-        <section id="hero">
-            <p class="hero-p">Empowering Futures, Transforming Careers.</p>
-            <h1>Transforming the way of Hiring.Education.Learning.Business.</h1>
-            <p>"Face challenges as opportunities, much like Cognifyz Technologies navigates innovation.
-                With determination and belief in your potential, every hurdle becomes a stepping stone to success."</p>
-        </section>
-
-        <section id="about">
-            <h2>About Us</h2>
-            <h3>Innovate or Stagnate, Technology waits for no one</h3>
-            <p>Cognifyz Technologies is a technology company that provides software solutions for businesses. The company offers a range of products and services, including artificial intelligence (AI), machine learning (ML), and data analytics tools.             
-                One of the main offerings of Cognifyz Technologies is their AI-powered chatbot platform, which can be integrated with various communication channels such as websites, social media, and messaging apps. The chatbot platform allows businesses to automate their customer support and engagement, reduce response time, and improve customer satisfaction.
-                Cognifyz Technologies also provides ML-based solutions for predictive analytics, fraud detection, and recommendation engines. These tools help businesses to analyze large amounts of data and make data-driven decisions in real-time.</p>
-        </section>
-
-        <section id="services">
-            <h2>Our Services</h2>
-            <div class="description row">
-
-            <div class="col-md-6">
-            <h3>What Cognifyz Technologies offers you?</h3>
-            </div>
-            <div class="col-md-6">
-              <p>Face challenges as opportunities, much like Cognifyz Technologies navigates innovation. With determination and belief in your potential, every hurdle becomes a stepping stone to success.</p>
-            </div>
-            </div>
-            <div class=" items row">
-              <div class="grid-item">
-                  <h3>Data & Analytics</h3>
-                  <p>Uncover Insights, Drive Decisions.</p>
-              </div>
-              <div class="grid-item">
-                  <h3>AI/ML Automation</h3>
-                  <p>Transforming Futures through Precision.</p>
-              </div>
-              <div class="grid-item">
-                  <h3>Internet of Things(IoT)</h3>
-                  <p>Connecting Possibilities, Bridging Realities.</p>
-              </div>
-              <div class="grid-item">
-                <h3>Software Development</h3>
-                <p>Innovate Code, Inspire Solutions.</p>
-            </div>
-          </div>
-          <div class="items row">
-            <div class="grid-item">
-                <h3>App Development</h3>
-                <p>Crafting Apps, Shaping Futures.</p>
-            </div>
-            <div class="grid-item">
-                <h3>Graphic Designing</h3>
-                <p>Visualize Impact, Design Tomorrow.</p>
-            </div>
-            <div class="grid-item">
-              <h3>Digital Marketing</h3>
-              <p>Elevate Reach, Ignite Success.</p>
-          </div>
-            <div class="grid-item">
-              <h3>Consulting Services</h3>
-              <p>Guiding Growth, Powering Strategies.</p>
-          </div>
-        </div>
-        <div class=" items row">
-          <div class="grid-item">
-              <h3>E-commerce Solutions</h3>
-              <p>Elevate Commerce, Empower Growth.</p>
-          </div>
-          <div class="grid-item">
-              <h3>WordPress Solutions</h3>
-              <p>Empowering Online Presence, WordPress Wonders.</p>
-          </div>
-          </div>
-        </section>
-
-        <section id="contact">
-            <h2>Contact Us</h2>
-            <form>
-                <input type="text" placeholder="Name">
-                <input type="email" placeholder="Email">
-                <textarea placeholder="Message"></textarea>
-                <button class="btn btn-primary" type="submit">Submit</button>
-            </form>
-        </section>
-    </main>
-
-    <footer class="footer bg-dark text-white">
+    <!-- Navigation -->
+    <nav class="navbar navbar-default navbar-fixed-top navbar-shrink">
         <div class="container">
-            <p>&copy; 2024 Cognifyz Technologies</p>
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header page-scroll">
+                <button type="button" class="navbar-toggle" data-toggle="collapse"
+                    data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand page-scroll" href="#page-top">Cognifyz</a>
+            </div>
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-right">
+                    <li class="hidden active">
+                        <a href="#page-top"></a>
+                    </li>
+                    <li class="">
+                        <a class="page-scroll" href="#services">Services</a>
+                    </li>
+                    <li class="">
+                        <a class="page-scroll" href="#portfolio">Portfolio</a>
+
+                    <li class="">
+                        <a class="page-scroll" href="#contact">Contact</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container-fluid -->
+    </nav>
+
+    <!-- Header -->
+    <header>
+        <div class="container">
+            <div class="intro-text">
+                <div class="intro-lead-in">Hello team</div>
+                <div class="intro-heading">Cognifyz</div>
+                <a href="#services" class="page-scroll btn btn-xl">#cognifyz</a>
+            </div>
+        </div>
+    </header>
+
+    <!-- Services Section -->
+    <section id="services">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">Services</h2>
+                    <p>Cognifyz Technologies is dedicated to empowering businesses through innovative,<br>
+                        industry-specific technology solutions. Our mission is to help organizations thrive in the<br>
+                        digital era, ensuring they stay competitive and adaptable in an ever-evolving marketplace.<br>
+
+                        We excel in custom software development, creating secure, scalable applications aligned with<br>
+                        your business objectives. Our web development delivers visually appealing, responsive<br>
+                        websites, while our mobile app development ensures high-performance apps for Android and<br>
+                        iOS.<br>
+
+                        As businesses transition to the cloud, we provide cloud computing solutions to enhance<br>
+                        flexibility and scalability. Our artificial intelligence and machine learning expertise<br>
+                        unlocks data potential, driving smarter decisions and automation.<br>
+
+                </div>
+            </div>
+    </section>
+
+    <!-- Portfolio Grid Section -->
+    <section id="portfolio" class="bg-light-gray">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">Portfolio</h2>
+                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-4 col-sm-6 portfolio-item">
+                    <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
+                        <div class="portfolio-hover">
+                            <div class="portfolio-hover-content">
+                                <i class="fa fa-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="https://unsplash.imgix.net/uploads%2F1411419068566071cef10%2F7562527b?q=75&w=1080&h=1080&fit=max&fm=jpg&auto=format&s=240c45655f09c546232a6f106688e502"
+                            class="img-responsive" alt="">
+                    </a>
+                    <div class="portfolio-caption">
+                        <h4>Round Icons</h4>
+                        <p class="text-muted">Graphic Design</p>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-6 portfolio-item">
+                    <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
+                        <div class="portfolio-hover">
+                            <div class="portfolio-hover-content">
+                                <i class="fa fa-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="https://unsplash.imgix.net/44/9s1lvXLlSbCX5l3ZaYWP_hdr-1.jpg?q=75&w=1080&h=1080&fit=max&fm=jpg&auto=format&s=f0a1db79752dbb04ec6d2aab7d17c7b0"
+                            class="img-responsive" alt="">
+                    </a>
+                    <div class="portfolio-caption">
+                        <h4>Startup Framework</h4>
+                        <p class="text-muted">Website Design</p>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-6 portfolio-item">
+                    <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
+                        <div class="portfolio-hover">
+                            <div class="portfolio-hover-content">
+                                <i class="fa fa-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="https://unsplash.imgix.net/46/Ov6ZY1zLTWmhPC0wFysP_IMG_2896_edt.jpg?q=75&w=1080&h=1080&fit=max&fm=jpg&auto=format&s=6518e4df89659818f6c0392175a9c5e6"
+                            class="img-responsive" alt="">
+                    </a>
+                    <div class="portfolio-caption">
+                        <h4>Treehouse</h4>
+                        <p class="text-muted">Website Design</p>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-6 portfolio-item">
+                    <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
+                        <div class="portfolio-hover">
+                            <div class="portfolio-hover-content">
+                                <i class="fa fa-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="https://unsplash.imgix.net/44/9s1lvXLlSbCX5l3ZaYWP_hdr-1.jpg?q=75&w=1080&h=1080&fit=max&fm=jpg&auto=format&s=f0a1db79752dbb04ec6d2aab7d17c7b0"
+                            class="img-responsive" alt="">
+                    </a>
+                    <div class="portfolio-caption">
+                        <h4>Golden</h4>
+                        <p class="text-muted">Website Design</p>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-6 portfolio-item">
+                    <a href="#portfolioModal5" class="portfolio-link" data-toggle="modal">
+                        <div class="portfolio-hover">
+                            <div class="portfolio-hover-content">
+                                <i class="fa fa-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="https://unsplash.imgix.net/46/Ov6ZY1zLTWmhPC0wFysP_IMG_2896_edt.jpg?q=75&w=1080&h=1080&fit=max&fm=jpg&auto=format&s=6518e4df89659818f6c0392175a9c5e6"
+                            class="img-responsive" alt="">
+                    </a>
+                    <div class="portfolio-caption">
+                        <h4>Escape</h4>
+                        <p class="text-muted">Website Design</p>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-6 portfolio-item">
+                    <a href="#portfolioModal6" class="portfolio-link" data-toggle="modal">
+                        <div class="portfolio-hover">
+                            <div class="portfolio-hover-content">
+                                <i class="fa fa-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="https://unsplash.imgix.net/uploads%2F1411419068566071cef10%2F7562527b?q=75&w=1080&h=1080&fit=max&fm=jpg&auto=format&s=240c45655f09c546232a6f106688e502"
+                            class="img-responsive" alt="">
+                    </a>
+                    <div class="portfolio-caption">
+                        <h4>Dreams</h4>
+                        <p class="text-muted">Website Design</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <!-- Contact us -->
+
+    <section id="contact">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">Contact Us</h2>
+                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12">
+                    <form name="sentMessage" id="contactForm" novalidate="">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <input type="text" class="form-control" placeholder="Your Name *" id="name"
+                                        required="" data-validation-required-message="Please enter your name.">
+                                    <p class="help-block text-danger"></p>
+                                </div>
+                                <div class="form-group">
+                                    <input type="email" class="form-control" placeholder="Your Email *" id="email"
+                                        required="" data-validation-required-message="Please enter your email address.">
+                                    <p class="help-block text-danger"></p>
+                                </div>
+                                <div class="form-group">
+                                    <input type="tel" class="form-control" placeholder="Your Phone *" id="phone"
+                                        required="" data-validation-required-message="Please enter your phone number.">
+                                    <p class="help-block text-danger"></p>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <textarea class="form-control" placeholder="Your Message *" id="message" required=""
+                                        data-validation-required-message="Please enter a message."></textarea>
+                                    <p class="help-block text-danger"></p>
+                                </div>
+                            </div>
+                            <div class="clearfix"></div>
+                            <div class="col-lg-12 text-center">
+                                <div id="success"></div>
+                                <button type="submit" class="btn btn-xl">Send Message</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <span class="copyright">Copyright © Your Website 2014</span>
+                </div>
+                <div class="col-md-4">
+                    <ul class="list-inline social-buttons">
+                        <li><a href="#"><i class="fa fa-twitter"></i></a>
+                        </li>
+                        <li><a href="#"><i class="fa fa-facebook"></i></a>
+                        </li>
+                        <li><a href="#"><i class="fa fa-linkedin"></i></a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-md-4">
+                    <ul class="list-inline quicklinks">
+                        <li><a href="#">Privacy Policy</a>
+                        </li>
+                        <li><a href="#">Terms of Use</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </footer>
 </body>
+<!-- partial -->
+<script src='//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+<script src='//ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js'></script>
+<script src='//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js'></script>
+<script src="./script.js"></script>
+
+</body>
+
 </html>
